--- a/.github/workflow/rating-chart.yml
+++ b/.github/workflow/rating-chart.yml
@@ -5,7 +5,7 @@
 name: Update Readme ascii graph and workflow with random cron interval
 on:
   push:
-    branches: master
+    branches: main
     paths-ignore:
       - README.md
       - .github/workflows/rating-chart.yml
