--- a/.github/workflow/rating-chart.yml
+++ b/.github/workflow/rating-chart.yml
@@ -15,7 +15,7 @@ jobs:
   ratings-chart:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
         with:
           token: ${{ secrets.GH_TOKEN_1 }}
         name: Setup Python
@@ -48,8 +48,8 @@ jobs:
       - if: ${{ steps.changed.outcome == 'failure' }}
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: Aditya Pal
-          author_email: aditya.pal.science@gmail.com
+          author_name: Laxman Singh
+          author_email: laxmansingh.lakhan@gmail.com
           message: "Auto updating my readme and workflow timing!"
           add: "README.md .github/workflows/rating-chart.yml"
         env:
