--- a/.github/workflows/rating-chart.yml
+++ b/.github/workflows/rating-chart.yml
@@ -48,8 +48,8 @@
        - if: ${{ steps.changed.outcome == 'failure' }}
          uses: EndBug/add-and-commit@v4
          with:
-           author_name: Aditya Pal
-           author_email: aditya.pal.science@gmail.com
+           author_name: Laxman Singh
+           author_email: laxmansingh.lakhan@gmail.com
            message: "Auto updating my readme and workflow timing!"
            add: "README.md .github/workflows/rating-chart.yml"
          env:
