--- a/.github/workflows/rating-chart.yml
+++ b/.github/workflows/rating-chart.yml
@@ -23,7 +23,7 @@
          with:
            python-version: 3.7
          name: Install dependencies
-       - run: pip install -r requirements.txt
+       - run: pip install -r .github/requirements.txt
          name: Create Chart
        - run: |
            python codes/rating_chart.py > chart.txt
