--- a/.github/requirements.txt
+++ b/.github/requirements.txt
@@ -10,8 +10,8 @@ urllib3==1.26.5; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 wrapt==1.12.1
 berserk==0.10.0
 pandas
-numpy==1.22.4
-datetime==4.4
+numpy
+datetime
 os
 math
 pytz
