--- a/.github/workflows/rating-chart.yml
+++ b/.github/workflows/rating-chart.yml
@@ -25,6 +25,8 @@
          name: Install dependencies
        - run: pip install -r .github/requirements.txt
          name: Create Chart
+         env:
+             TOKEN = ${{ secrets.TOKEN_LICHESS }}
        - run: |
            python codes/rating_chart.py > chart.txt
            CHART=$(cat chart.txt)
