--- a/.github/workflows/rating-chart.yml
+++ b/.github/workflows/rating-chart.yml
@@ -26,18 +26,18 @@
        - run: pip install -r .github/requirements.txt
          name: Test env vars for python
        - run: |
-           TOKEN=${{ secrets.TOKEN_LICHESS }} python codes/rating_chart.py > chart.txt
+           TOKEN=${{ secrets.TOKEN_LICHESS }} python Codes/rating_chart.py > chart.txt
            CHART=$(cat chart.txt)
            echo "::set-output name=chart::$CHART"
-       - run: cat assets/README-1.md > README.md
+       - run: cat Assets/README-1.md > README.md
        - run: cat chart.txt >> README.md
        - run: |
            currentDate=`env TZ=Asia/Kolkata date`
            printf "\nChart last updated - ${currentDate}" >> README.md
-       - run: cat assets/README-2.md >> README.md
+       - run: cat Assets/README-2.md >> README.md
          name: Update workflow yaml file
        - run: |
-           python codes/generate_random_workflow.py > rating-yaml.txt
+           python Codes/generate_random_workflow.py > rating-yaml.txt
            YAML=$(cat rating-yaml.txt)
            echo "::set-output name=yaml::$YAML"
        - run: cat rating-yaml.txt > .github/workflows/rating-chart.yml
